# NSG

./: .clang-format  CMakeLists.txt
data/: wiki-Vote.txt_embed  wiki-Vote.txt_gidsne  wiki-Vote.txt_grd_embed  wiki-Vote.txt_grd_gidsne  wiki-Vote.txt_grd_knn  wiki-Vote.txt_grd_nssg  wiki-Vote.txt_grd_searchResult  wiki-Vote.txt_index  wiki-Vote.txt_nssg  wiki-Vote.txt_query  wiki-Vote.txt_searchResult
include/efanna2e/: index.h  index_GIDSNE.h  index_nsg.h  neighbor.h
python/: IndexOriginFile.py  testCCall.py  testRecall.py  test_data.fvecs
python/Embed/: NMF_1130.py  __init__.py
python/FileUtil/: BitWrite.py  IndexOriginFile.py
script/: test.sh  test1.sh
src/: CMakeLists.txt  index_GIDSNE.cpp  index_nsg.cpp
tests/: CMakeLists.txt  test_gidsne_index.cpp  test_nsg_index.cpp  test_nsg_search.cpp
tools/: nssg_index  nssg_search  test_nndescent_mac
